--- a/public/assets/css/beautiful.css
+++ b/public/assets/css/beautiful.css
@@ -405,6 +405,16 @@ cursor: pointer;
   border-radius: 50%;
 }
 
+#add_new_tab {
+  border: 1px solid gray;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.tab-remove-icon {
+  width: 16px;
+}
+
 @media only screen and (max-width: 768px) {
   .modal-content {
     width: 80%;
