--- a/public/assets/css/beautiful.css
+++ b/public/assets/css/beautiful.css
@@ -127,7 +127,7 @@ cursor: pointer;
   float: right;
   position: absolute;
   bottom: 70px;
-  right: 431px;
+  right: 480px;
   display: flex;
   font-size: 24px;
   color: white;
@@ -155,6 +155,10 @@ cursor: pointer;
   z-index: 10;
 }
 
+.bar-play:hover {
+  cursor: pointer;
+}
+
 .bar-controls {
   margin-left: 20px;
   float: left;
@@ -168,10 +172,6 @@ cursor: pointer;
   border-radius: 4px;
   border-right: 1px solid var(--border-color);
   z-index: 10;
-}
-
-.btn-controls {
-  margin-left: 15px;
 }
 
 .bar-zoom {
@@ -197,6 +197,11 @@ cursor: pointer;
 }
 .bar-zoom svg:nth-child(1) {
   padding-left: 0px;
+}
+
+.start-config-btn {
+  margin-top: 20px!important;
+  float: right;
 }
 
 #drawflow {
@@ -255,7 +260,7 @@ cursor: pointer;
     bottom: 70px;
   }
   .btn-lock {
-    right: 135px;
+    right: 200px;
   }
   .bar-zoom {
     right: 20px;
