--- a/public/assets/css/beautiful.css
+++ b/public/assets/css/beautiful.css
@@ -357,7 +357,7 @@ cursor: pointer;
 }
 
 .drawflow-node.welcome {
-  width: 250px;
+  width: 300px;
 }
 
 .drawflow-node.slack .title-box {
@@ -459,4 +459,48 @@ cursor: pointer;
   .modal-content {
     width: 80%;
   }
+}
+
+.MuiBox-root-453 {
+  margin-top: 0px;
+}
+
+.environment, .agents, .reward, .action_space {
+  width: 400px!important;
+}
+
+input[type="range"]::-moz-range-thumb,
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  border: 2px solid #4299e1;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+}
+
+.slider-value {
+  display: inline-block;
+  width: 20px;
+  text-align: center;
+}
+
+.w-full {
+  width: 100%!important;
+}
+
+.node-bottom input {
+  width: 50px!important;
+}
+
+.reward-node input {
+  width: 50px!important;
+}
+
+.reward-function-btn {
+  width: 30px;
+  height: 30px;
 }
